@@ -1,4 +1,4 @@
-/*	$NetBSD: cfparse.y,v 1.18.4.5 2008/07/09 12:22:03 tteras Exp $	*/
+/*	$NetBSD: cfparse.y,v 1.18.4.6 2008/07/21 14:28:57 tteras Exp $	*/
 
 /* Id: cfparse.y,v 1.66 2006/08/22 18:17:17 manubsd Exp */
 
@@ -2412,7 +2412,11 @@ expand_isakmpspec(prop_no, trns_no, types,
 			}
 			memcpy(new->gssid->v, gssid, new->gssid->l);
 			racoon_free(gssid);
+#ifdef ENABLE_HYBRID
+		} else if (rmmconf->xauth == NULL) {
+#else
 		} else {
+#endif
 			/*
 			 * Allocate the default ID so that it gets put
 			 * into a GSS ID attribute during the Phase 1
